tests/idris2/reg017/expected
1/1: Building lammult (lammult.idr)
Error: While processing right hand side of badmap. When unifying (0 _ : ?a) -> ?b and ?a -> ?b.
Mismatch between: (0 _ : ?a) -> ?b and ?a -> ?b.

lammult.idr:2:18--2:19
   |
 2 | badmap = map (\0 x => 2)
   |                  ^

